--- a/index.html
+++ b/index.html
@@ -4,51 +4,58 @@
 <head>
     <meta charset="utf-8">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-logo">Header Logo</div>
-        <div class="right-links">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+    <div class="hero">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="right-links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-
-    <div class="main">
-        <h1>This website is awesome</h1>
-        <p>This websitehas some subtest that goes here under the main title. It's a smaller font and the color is lower
-            contrast</p>
-        <button>Sign up</button>
-        <img src="img/bird-graph.png" alt="bird graph">
+        <div class="main">
+            <div class="context">
+                <h1>This website is awesome</h1>
+                <p>This websitehas some subtest that goes here under the main title. It's a smaller font and the color
+                    is
+                    lower
+                    contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="img/social.png" alt="bird graph">
+        </div>
     </div>
 
     <div class="infograph">
         <h2>Some random information.</h2>
-        <div class="content">
-            <div class="container">
-                <div class="info">
-                    <img src="img/data.png" alt="data infograph">
-                    <p>thsi is some subtext under an illustration or image</p>
-                </div>
-                <div class="info">
-                    <img src="img/Instagram.png" alt="instagram infograph">
-                    <p>thsi is some subtext under an illustration or image</p>
-                </div>
-                <div class="info">
-                    <img src="img/team.png" alt="team infograph">
-                    <p>thsi is some subtext under an illustration or image</p>
-                </div>
-                <div class="info">
-                    <img src="img/money.png" alt="money infograph">
-                    <p>thsi is some subtext under an illustration or image</p>
-                </div>
+        <div class="container">
+            <div class="info">
+                <div class="images"><img src="img/data.png" alt="data infograph"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="images"><img src="img/Instagram.png" alt="instagram infograph"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="images"><img src="img/team.png" alt="team infograph"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="images"><img src="img/money.png" alt="money infograph"></div>
+                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
-        <div class="quote">
+    </div>
+
+    <div class="quote">
+        <div class="section">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
                 people will actually read it. Who knows? All iknow is that it looks nice.</p>
             <p>-Thor, God of Thunder</p>
@@ -56,9 +63,13 @@
     </div>
 
     <div class="action">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="card">
+            <div class="title">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project 2021</div>
 </body>
